--- a/backoffice-front/package.json
+++ b/backoffice-front/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.6",
     "hero-slider": "^3.1.0",
     "js-cookie": "^3.0.4",
+    "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
